--- a/index.css
+++ b/index.css
@@ -132,6 +132,9 @@ Challenge:
     display: flex;
     justify-content: center;
 }
+.switch {
+    flex-direction: row-reverse;
+}
 
 .modal-btn{
     padding: 10px 24px;
